--- a/about.html
+++ b/about.html
@@ -293,21 +293,8 @@
                 </div>  
             </div>
              <!-- Copy Right -->
-            <div class="copy_right row"> 
-                <div class="col-lg-8">
-                   <div class="receive_email"> 
-                        <h4>Receive news right on your email</h4>
-                        <div class="email_from"> 
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your email">
-                                <div class="input-group-append">
-                                    <span class="input-group-text theme_btn"><i class="fa fa-paper-plane"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                   </div>
-                </div>
-                <p class="col-lg-4 order-lg-first">Copyright 2018, All Right Reserved</p> 
+            <div class="copy_right row w-100 "> 
+                <p class="col text-center order-lg-first">Copyright 2018, All Right Reserved</p> 
             </div>
         </div> 
     </footer>
