--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
                 </div>  
             </div>
              <!-- Copy Right -->
-            <div class="copy_right row "> 
-                <p class="col order-lg-first">Copyright 2018, All Right Reserved</p> 
+            <div class="copy_right row w-100 "> 
+                <p class="col text-center order-lg-first">Copyright 2018, All Right Reserved</p> 
             </div>
         </div> 
     </footer>
