--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="welcome_img"> 
-                    <img class="w-100" src="images/B3.jpg" alt=""> 
+                    <img class="w-100" src="images/b3.jpg" alt=""> 
                 </div>
              </div>
  
