--- a/industries-2.html
+++ b/industries-2.html
@@ -94,7 +94,7 @@
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                    <li class="dropdown"><a class="dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
