--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                    <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="col-lg-6 company_img">
-                <img src="images/about-b1.jpg" alt="">
+                <img class="w-100" src="images/about-b1.jpg" alt="">
             </div>
         </div>
     </section>
@@ -178,7 +178,7 @@
     <!-- Welcome Area -->  
     <section class="welcome_area">
         <div class="row ">
-            <div class="col-lg-6 welcome_content_aera">
+            <div class="col-lg-6 welcome_content_aera ">
                <div class="welcome_content"> 
                     <h2>Welcome at GSC, we are driven by a commitment to excellence, partnering with industries that rely on high-performance chemical solutions to enhance their operations.</h2>
                     <p class="sub_p">Whether it’s in the oil and gas sector, manufacturing, or printing, our products are engineered to meet the rigorous demands of modern industries. Our in-depth knowledge and experience allow us to develop solutions tailored to our clients' specific needs, ensuring their processes run smoothly and efficiently.</p>
