--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
                     <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
-                    <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
+                    <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
                     <a href="#" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
