--- a/industries-2.html
+++ b/industries-2.html
@@ -113,7 +113,7 @@
                     </div>
                 </nav> 
                 <ul class="search_button_content nav">  
-                    <li><a href="#" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
+                    <li><a href="/contact.html" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
                 </ul> 
            </div>
         </div>
@@ -340,7 +340,7 @@
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
-                    <a href="#" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
+                    <a href="/contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -383,7 +383,7 @@
             </div>
              <!-- Copy Right -->
              <div class="copy_right row w-100 "> 
-                <p class="col text-center order-lg-first">Copyright 2018, All Right Reserved</p> 
+                <p class="col text-center order-lg-first">©  2024  VERTEX</p> 
             </div>
         </div> 
     </footer>
