--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li><a class="nav-link" href="">Solvents</a>
+                                    <li><a class="nav-link" href="/case-studies-single.html">Solvents</a>
                                     </li> 
                                     <li><a href="#">Thinners</a></li> 
                                     <li><a href="#">Special Detergents</a></li> 
@@ -113,7 +113,7 @@
                     </div>
                 </nav> 
                 <ul class="search_button_content nav">  
-                    <li><a href="#" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
+                    <li><a href="/contact.html" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
                 </ul> 
            </div>
         </div>
@@ -223,7 +223,7 @@
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
-                    <a href="#" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
+                    <a href="/contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -266,7 +266,7 @@
             </div>
              <!-- Copy Right -->
              <div class="copy_right row w-100 "> 
-                <p class="col text-center order-lg-first">Copyright 2018, All Right Reserved</p> 
+                <p class="col text-center order-lg-first">©  2024  VERTEX</p> 
             </div>
         </div> 
     </footer>
