--- a/contact.html
+++ b/contact.html
@@ -130,26 +130,19 @@
      
     <!-- Map Area -->   
     <section class="map_area row"> 
-        <div id="mapBox" class="col-lg-7" 
-            data-lat="40.701083" 
-            data-lon="-74.1522848" 
-            data-zoom="12" 
-            data-marker="images/map-markar.png" 
-            data-info="16122 Collins Street West Victoria 8007 CA"
-            data-mlat="40.701083"
-            data-mlon="-74.1522848">
+        <div  class="col-lg-7" >
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d110511.45100264264!2d31.263490890550013!3d30.051691249448343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s4%20El%20Frados%20Complex%2C%20Nasr%20City%2C%20Cairo%2C%20Egypt.!5e0!3m2!1sar!2seg!4v1729900637361!5m2!1sar!2seg" width="100%" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div> 
         <div class="col-lg-5">
             <div class="easy_contact">
                 <h3>Easy Contact</h3>
                 <address>
                     <b>Email:</b>
-                    info@yoursite.com 
-                    <b>+88 (016) 567.890.11</b>
-                    Monday–Friday 9am-6pm
+                    info@globalchem-eg.com 
+                    <b>(+20)223426311</b>
+                    Time : Sunday-Thursday 09am-5pm
                     <b>Address</b>
-                    51 Somestreet Cambridge,
-                    CB4 3AA, United Kingdom
+                    4 El Frados Complex, Nasr City, Cairo, Egypt.
                 </address>
             </div>
         </div>
