--- a/about.html
+++ b/about.html
@@ -184,9 +184,9 @@
                     <p class="sub_p">Whether it’s in the oil and gas sector, manufacturing, or printing, our products are engineered to meet the rigorous demands of modern industries. Our in-depth knowledge and experience allow us to develop solutions tailored to our clients' specific needs, ensuring their processes run smoothly and efficiently.</p>
                     <h2>Why Choose GSC?</h2>
                     <p>We understand that our customers depend on the quality and reliability of our products. That’s why we are committed to continuous research and development, ensuring that we stay at the forefront of innovation in the chemical industry. Our products are not only designed to perform but are also developed with a focus on safety and sustainability—minimizing environmental impact while maximizing efficiency. </p>
-                    <h4><img class="w-10" src="images/asset3.svg" alt=""> OUR MISSION</h4>
+                    <h4><img class="w-10" src="images/blue icons/a4.svg" alt=""> OUR MISSION</h4>
                     <p class="factory_p">To provide safe, sustainable, and innovative chemical solutions that drive operational success for our clients across diverse industries.</p>
-                    <h4><img class="w-10" src="images/a.svg" alt=""> OUR VISION</h4>
+                    <h4><img class="w-10" src="images/blue icons/a4.svg" alt=""> OUR VISION</h4>
                     <p>To lead the Egyptian and regional markets as a trusted provider of advanced industrial chemicals, contributing to the growth and sustainability of the industries we serve.</p>
                </div>
             </div>
@@ -247,7 +247,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
