--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="fetures">
-                        <img  class="w-25" src="images/industry-alt.svg" alt="">
+                        <img  class="w-25" src="images/blue icons/a4.svg" alt="">
                         <a href="industries-2.html" class="heding">Industrial Detergents</a>
                         <p>Heavy-duty cleaning solutions for industrial environments, designed to remove grease and dirt from machinery and equipment.</p>
                         <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
@@ -466,8 +466,8 @@
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="fetures">
-                        <img class="w-25" src="images/2.svg" alt="">
-                        <a href="industries-2.html" class="heding">Home Detergents</a>
+                        <img class="w-25" src="images/blue icons/a1.svg" alt="">
+                        <a href="industries-2.html" class="heding">Household Detergants</a>
                         <p>Our eco-friendly detergents provide powerful, safe cleaning for every corner of your home, ensuring hygiene and protecting your family.</p>
                         <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
@@ -475,37 +475,38 @@
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.6s">
                     <div class="fetures">
-                        <img class="w-25" src="images/flask.svg" alt="">
-                        <a href="industries-single.html" class="heding">Mixed Solvents  </a>
-                        <p>Custom-blended solvents tailored for industrial applications like coatings, adhesives, and printing, ensuring efficiency and versatility.</p>
+                        <img class="w-25" src="images/blue icons/a2.svg" alt="">
+                        <a href="industries-single.html" class="heding">Solvents  </a>
+                        <p>Our high-quality solvents are designed for dissolving, cleaning, and thinning in various industrial applications, ensuring effective performance across sectors.</p>
                         <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
                     <div class="fetures">
-                        <img class="w-30" src="images/6.svg" alt="">
-                        <a href="industries-single.html" class="heding">Pure Solvents </a>
-                        <p>High-purity chemical solvents for specialized industries such as pharmaceuticals and electronics, offering precise performance.</p>
-                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
-                    <div class="fetures">
-                        <img class="w-25" src="images/3.svg" alt="">
-                        <a href="industries-single.html" class="heding">Thinners</a>
+                        <img class="w-30" src="images/blue icons/a3.svg" alt="">
+                        <a href="industries-single.html" class="heding">Thinners </a>
                         <p>Formulated to reduce the viscosity of paints and coatings, our thinners ensure smooth application and consistent results.</p>
                         <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <div class="fetures">
-                        <img class="w-25" src="images/6.svg" alt="">
+                        <img class="w-25" src="images/blue icons/a6.svg" alt="1.1s">
                         <a href="industries-single.html" class="heding">Special Detergents</a>
                         <p>Tailor-made detergents designed to meet specific industrial cleaning needs, developed in collaboration with our clients.</p>
                         <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="fetures">
+                        <img class="w-25" src="images/blue icons/a5.svg" alt="">
+                        <a href="industries-single.html" class="heding">Oilfield chemicals</a>
+                        <p>Specially formulated to enhance oil extraction and processing, ensuring safety, durability, and peak performance in tough environments.</p>
+                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
                 <!-- Fetures -->
             </div>
         </div>
@@ -572,7 +573,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
