--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
     <!-- Map Area -->   
     <section class="map_area row"> 
         <div  class="col-lg-7" >
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d110511.45100264264!2d31.263490890550013!3d30.051691249448343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s4%20El%20Frados%20Complex%2C%20Nasr%20City%2C%20Cairo%2C%20Egypt.!5e0!3m2!1sar!2seg!4v1729900637361!5m2!1sar!2seg" width="100%" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.3261056491633!2d31.30130999999999!3d30.0561856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583fbe06bff28f%3A0x5712db8650f1e7fe!2z2KzZhNmI2KjYp9mEINmE2YTZg9mK2YXYp9mI2YrYp9iqINin2YTZhdiq2K7Ytdi12Yc!5e0!3m2!1sen!2seg!4v1729987393380!5m2!1sen!2seg" width="100%" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div> 
         <div class="col-lg-5">
             <div class="easy_contact">
@@ -212,7 +212,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
