--- a/industries-2.html
+++ b/industries-2.html
@@ -336,7 +336,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
