--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
     <section class="from_area">  
         <div class="container"> 
            <div class="row">
-               <div class="col-lg-9"> 
+               <div class="col"> 
                    <h2>Leave your Request</h2>
                     <form class="from_main row" action="php/contact.php" method="post" id="phpcontactform" novalidate="novalidate"> 
                         <div class="form-group col-md-6">
@@ -173,18 +173,6 @@
                             <div id="js-contact-result" data-success-msg="Form submitted successfully." data-error-msg="Messages Successfully"></div>
                         </div>
                     </form>
-               </div>
-               <div class="col-lg-3">
-                  <div class="meta">
-                      <h4>Meta</h4> 
-                       <ul> 
-                           <li><a href="#">Log in</a></li>
-                           <li><a href="#">Entries RSS</a></li>
-                           <li><a href="#">Comments RSS</a></li>
-                           <li><a href="#">WordPress.org</a></li>
-                           <li><a href="team.html">Team</a></li>
-                       </ul>
-                  </div>
                </div>
            </div>
         </div>
