--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" href="images/GSC.png" type="image/x-icon" />
-    <!-- Theme tittle -->
-    <title>Pectro | Html Template</title> 
+    <!-- Theme tittleG -->
+    <title>GSC | Global For Specialty Chemicals</title> 
     
     <!-- Theme style CSS --> 
     <link href="css/style.css" rel="stylesheet">   
