--- a/about.html
+++ b/about.html
@@ -159,17 +159,19 @@
     
     <!-- About Company Area -->  
     <section class="about_company_area">
-        <div class="row">
-            <div class="col-lg-6 p-0">
-                <div class="about_company">
-                    <h4>About Us</h4>
-                    <h2>Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
-                    <p> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
-                    <a href="/contact.html" class="theme_btn">Get Quote</a>
+        <div class="container-fluied  w-100">
+            <div class="row w-100">
+                <div class="col-lg-6 p-0">
+                    <div class="about_company">
+                        <h4>About Us</h4>
+                        <h2>Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
+                        <p> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
+                        <a href="/contact.html" class="theme_btn">Get Quote</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-6 company_img">
-                <img class="w-100" src="images/about-b1.jpg" alt="">
+                <div class="col-lg-6 company_img">
+                    <img class="w-100" src="images/about-b1.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
