--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@
 <body> 
 
     <!-- Header Top Area -->
+    <!-- <div class="header_top_area"> 
+        <div class="container">  
+            <div class="header_top_inner row"> 
+                <div class="col-md-4"> 
+                    <ul class="contact_number">
+                        <li><a href="#" type="tel"><i class="flaticon-phone-call"></i>(+20)223426311</a></li> 
+                    </ul>
+                </div> 
+                <div class="col-md-8"> 
+                    <ul class="lng_time"> 
+                        <li><a href="#">Time : Sunday-Thursday 09am-5pm</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" >ENG</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" class="active">ENG</a></li>
+                                <li><a href="#">BAN</a></li> 
+                            </ul>
+                        </li> 
+                    </ul>  
+                </div>
+            </div>
+        </div> 
+    </div> -->
     <!-- Header Top Area --> 
     
     <!-- Header Logo Area -->
