--- a/industries-2.html
+++ b/industries-2.html
@@ -22,7 +22,7 @@
 <body> 
 
     <!-- Header Top Area -->
-    <div class="header_top_area"> 
+    <!-- <div class="header_top_area"> 
         <div class="container">  
             <div class="header_top_inner row"> 
                 <div class="col-md-4"> 
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div> 
-    </div>
+    </div> -->
     <!-- Header Top Area --> 
     
     <!-- Header Logo Area -->
