--- a/about.html
+++ b/about.html
@@ -112,9 +112,6 @@
                         </ul>  
                     </div>
                 </nav> 
-                <ul class="search_button_content nav">  
-                    <li><a href="/contact.html" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
-                </ul> 
            </div>
         </div>
     </header>
@@ -163,9 +160,9 @@
                 <div class="col-lg-6 p-0 d-flex justify-content-end align-items-start">
                     <div class="about_company w-75">
                         <h4>About Us</h4>
-                        <h2>Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
-                        <p> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
-                        <a href="/contact.html" class="theme_btn">Get Contact</a>
+                        <h2 class="mb-5">Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
+                        <p class="mb-5"> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
+                        <a href="/contact.html" class="theme_btn">Contact Us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 company_img">
