--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="images/GSC.png" type="image/x-icon" />
     <!-- Theme tittleG -->
     <title>GSC | Global For Specialty Chemicals</title> 
-    
+    <script src="https://kit.fontawesome.com/ae937d8a07.js" crossorigin="anonymous"></script>
+
     <!-- Theme style CSS --> 
     <link href="css/style.css" rel="stylesheet">   
 
@@ -68,9 +69,8 @@
                     <ul class="header_social col-md-4 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-slack"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div> 
             </div>
@@ -250,11 +250,10 @@
                     <span class="persent">100%</span>
                     <a href="/contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-slack"></i></a></li> 
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li> 
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
