--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
     <link rel="icon" href="images/GSC.png" type="image/x-icon" />
     <!-- Theme tittle -->
     <title>GSC | Global For Specialty Chemicals </title> 
-    
+    <script src="https://kit.fontawesome.com/ae937d8a07.js" crossorigin="anonymous"></script>
+
     <!-- Theme style CSS --> 
     <link href="css/style.css" rel="stylesheet">   
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body> 
 
@@ -68,9 +63,8 @@
                     <ul class="header_social col-md-4 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-slack"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div> 
             </div>
@@ -576,11 +570,10 @@
                     <span class="persent">100%</span>
                     <a href="/contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-slack"></i></a></li> 
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li> 
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
