--- a/industries-2.html
+++ b/industries-2.html
@@ -338,9 +338,6 @@
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
-                    <h4>CUSTOMER SATISFACTION</h4>
-                    <span class="persent">100%</span>
-                    <a href="/contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -352,15 +349,15 @@
                     <h4>GSC</h4>
                     <ul class="footer_nav">  
                         <li><a href="#">Home</a></li> 
-                        <li><a href="#">About Us</a></li> 
-                        <li><a href="#">Contact us</a></li> 
+                        <li><a href="about.html">About Us</a></li> 
+                        <li><a href="contact.html">Contact us</a></li> 
                     </ul>
                 </div>  
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <h4> Detergents</h4>  
                     <ul class="footer_nav">     
                         <li><a href="#">Industrial Detergents</a></li>   
-                        <li><a href="#">Household Detergents</a></li>   
+                        <li><a href="industries-2.html">Household Detergents</a></li>   
                     </ul>
                 </div>
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
