--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li><a class="nav-link" href="">Solvents</a>
+                                    <li><a class="nav-link" href="industries.html">Solvents</a>
                                     </li> 
                                     <li><a href="#">Thinners</a></li> 
                                     <li><a href="#">Special Detergents</a></li> 
