--- a/Thinners.html
+++ b/Thinners.html
@@ -21,34 +21,6 @@
     <![endif]-->
 </head>
 <body> 
-
-    <!-- Header Top Area -->
-    <!-- <div class="header_top_area"> 
-        <div class="container">  
-            <div class="header_top_inner row"> 
-                <div class="col-md-4"> 
-                    <ul class="contact_number">
-                        <li><a href="#" type="tel"><i class="flaticon-phone-call"></i>(+20)223426311</a></li> 
-                    </ul>
-                </div> 
-                <div class="col-md-8"> 
-                    <ul class="lng_time"> 
-                        <li><a href="#">Time : Sunday-Thursday 09am-5pm</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" >ENG</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" class="active">ENG</a></li>
-                                <li><a href="#">BAN</a></li> 
-                            </ul>
-                        </li> 
-                    </ul>  
-                </div>
-            </div>
-        </div> 
-    </div> -->
-    <!-- Header Top Area --> 
-    
-    <!-- Header Logo Area -->
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
@@ -76,9 +48,6 @@
             </div>
         </div> 
     </div>
-    <!-- Header Logo Area -->  
-
-    <!-- Header Area -->
     <header class="main_header_area"> 
        <div class="container">
             <div class="header_menu"> 
@@ -87,7 +56,6 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar_supported"  aria-expanded="false" aria-label="Toggle navigation"> 
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </button>
-
                     <div class="collapse navbar-collapse navbar_supported">
                         <ul class="navbar-nav"> 
                             <li><a class="nav-link active" href="index.html">Home</a></li>  
@@ -96,15 +64,15 @@
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
                                     <li><a class="nav-link" href="industries.html">Solvents</a>
                                     </li> 
-                                    <li><a href="#">Thinners</a></li> 
-                                    <li><a href="#">Special Detergents</a></li> 
-                                    <li><a href="#">Oilfield Chemicals</a></li> 
+                                    <li><a href="Thinners.html">Thinners</a></li> 
+                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
@@ -115,7 +83,7 @@
                 <ul class="search_button_content nav">  
                     <li><a href="/contact.html" class="theme_btn"><i class="fa fa-arrow-right"></i>Get Quote</a></li>
                 </ul> 
-           </div>
+            </div>
         </div>
     </header>
     <!-- Header Area -->  
@@ -126,37 +94,6 @@
             <h2>Household Detergents</h2>
         </div>
     </section>  
-    <!-- End Banner Area --> 
-    <!-- Experience Area -->  
-    <!-- <section class="experience_area ea_2">
-        <div class="container">
-            <div class="row experience_inner">
-                <div class="col-lg-5 experience">
-                    <h1 class="counter">21</h1>
-                    <p>Years experience in Industrial area for give you better result.</p>
-                    <a href="#">About Inspiring solutions</a>
-                </div>
-                <div class="col-lg-7 sustainability row">
-                    <div class="col-md-6 result">
-                        <h4>Projects Completed</h4>
-                        <h2><span class="counter">10</span>k</h2>
-                    </div>
-                    <div class="col-md-6">
-                       <div class="result team"> 
-                            <h4>Team Members</h4>
-                            <h2 class="counter">56</h2>
-                       </div>
-                    </div>
-                    <div class="col-12 p-0">
-                        <a href="#" class="theme_btn">About Our Sustainability</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- End Experience Area --> 
-    
-    <!-- Fetures Area 2 --> 
     <section class="fetures_area fa_2">
         <div class="container">
             <div class="row mb-5">
@@ -165,7 +102,7 @@
             </div>
             <div class="row">
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn">
+                <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="factories">
                         <div class="factories_img pb-5 ">
                             <img class="w-100" src="images/3.jpg" alt="">
@@ -178,7 +115,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.3s"> 
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s"> 
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants1.jpg" alt="">
@@ -191,7 +128,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.6s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants3.jpg" alt="">
@@ -204,7 +141,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants4.jpg" alt="">
@@ -217,7 +154,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.1s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants5.jpg" alt="">
@@ -230,7 +167,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants6.jpg" alt="">
@@ -242,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
@@ -254,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
@@ -266,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants9.jpg" alt="">
@@ -278,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants10.jpg" alt="">
@@ -290,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/a.png" alt="">
@@ -302,7 +239,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/a.png" alt="">
@@ -339,7 +276,7 @@
     <footer class="footer_area">
         <div class="container"> 
             <div class="footer_inner row"> 
-                <div class="col-lg-4 col-md-6 product footer_logo wow fadeIn">
+                <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
                     <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
