--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/GSC.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/new12345.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
@@ -60,15 +60,15 @@
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
                                     <li><a class="nav-link" href="industries.html">Solvents</a>
                                     </li> 
-                                    <li><a href="#">Thinners</a></li> 
-                                    <li><a href="#">Special Detergents</a></li> 
-                                    <li><a href="#">Oilfield Chemicals</a></li> 
+                                    <li><a href="Thinners.html">Thinners</a></li> 
+                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
@@ -554,17 +554,17 @@
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <h4> Detergents</h4>  
                     <ul class="footer_nav">     
-                        <li><a href="#">Industrial Detergents</a></li>   
+                        <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
                         <li><a href="industries-2.html">Household Detergents</a></li>   
                     </ul>
                 </div>  
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
                     <h4>Products</h4> 
                     <ul class="footer_nav"> 
-                        <li><a href="#">Solvents</a></li>   
-                        <li><a href="#">Thinners </a></li>   
-                        <li><a href="#">Special Detergents</a></li>   
-                        <li><a href="#">Oilfield Chemicals</a></li>   
+                        <li><a href="industries.html">Solvents</a></li>   
+                        <li><a href="Thinners.html">Thinners </a></li>   
+                        <li><a href="special.html">Special Detergents</a></li>   
+                        <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                     </ul>
                 </div> 
 
