--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li><a class="nav-link" href="industries.html">Solvents</a>
+                                    <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                     </li> 
                                     <li><a href="Thinners.html">Thinners</a></li> 
                                     <li><a href="special.html">Special Detergents</a></li> 
@@ -271,7 +271,7 @@
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
                     <h4>Products</h4> 
                     <ul class="footer_nav"> 
-                        <li><a href="industries.html">Solvents</a></li>   
+                        <li><a href="Solvents.html">Solvents</a></li>   
                         <li><a href="Thinners.html">Thinners </a></li>   
                         <li><a href="special.html">Special Detergents</a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
