--- a/Thinners.html
+++ b/Thinners.html
@@ -231,10 +231,10 @@
         @media screen and (max-width: 900px) {
         .posts {
             grid-template-columns: repeat(3, 1fr);
-            padding-left: 0;
+            padding-left: 0 !important;
         }
         .filters{
-            padding-left: 0;
+            padding-left: 0 !important;
         }
         }
         
