--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -118,7 +118,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/GSC.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/new12345.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
