--- a/oilfield.html
+++ b/oilfield.html
@@ -247,7 +247,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/GSC.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/new12345.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
@@ -535,7 +535,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/new12345.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
