--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -77,7 +77,7 @@
     footer {
       font-size: 1rem;
       padding: 0 1.5rem;
-      text-align: right;
+      text-align: left;
     }
     
     footer span {
