--- a/industries-2.html
+++ b/industries-2.html
@@ -360,7 +360,7 @@
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <h4> Detergents</h4>  
                     <ul class="footer_nav">     
-                        <li><a href="#">Industrial Detergents</a></li>   
+                        <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
                         <li><a href="industries-2.html">Household Detergents</a></li>   
                     </ul>
                 </div>
