--- a/special.html
+++ b/special.html
@@ -195,7 +195,7 @@
     footer {
       font-size: 1rem;
       padding: 0 1.5rem;
-      text-align: right;
+      text-align: left;
     }
     
     footer span {
