--- a/oilfield.html
+++ b/oilfield.html
@@ -234,6 +234,13 @@
         grid-template-columns: repeat(2, 1fr);
       }
     }
+    .filters{
+    padding-left: 0;
+}
+.posts {
+    padding-left: 0;
+}
+
     
     </style>
     
