--- a/Solvents.html
+++ b/Solvents.html
@@ -195,7 +195,7 @@
     footer {
       font-size: 1rem;
       padding: 0 1.5rem;
-      text-align: right;
+      text-align: left;
     }
     
     footer span {
@@ -230,7 +230,6 @@
       html {
         font-size: 14px;
       }
-    
       .posts {
         grid-template-columns: repeat(1, 2fr);
       }
